Fix bug with screenshots on main page being cut off

--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -92,8 +92,8 @@
   margin-left: auto;
 
   img {
-    height: fit-content;
-    width: fit-content;
+    height: auto;
+    width: auto;
     align-self: flex-end;
     justify-self: baseline;
     margin-bottom: -2vh;
